Upload image to R2 working
